# Agentic-AI-Learning-Curve

./: AnalysisFile.md  FinalReport.md  InitialReport.md  README.md  ReviewFile.md  TaxReview.md  pyproject.toml
src/agenticai/: crew.py  main.py
src/agenticai/config/: agents.yaml  tasks.yaml
